# CSE333-CG

./: .gitmodules  README.md
asgn1/code/src/: main.cpp  utils.cpp  utils.h
asgn2/code/src/: main.cpp
asgn3/1/shaders/: vshader.vs
asgn3/1/src/: main.cpp
asgn3/2/shaders/gouraud/: fshader.fs  vshader.vs
asgn3/2/shaders/phong/: fshader.fs  vshader.vs
asgn3/2/src/: main.cpp
asgn3/3/src/: main.cpp
asgn3/bonus/shaders/: fshader.fs
asgn3/bonus/src/: main.cpp
asgn4/code/src/: camera.cpp  camera.h  color.cpp  color.h  lightsource.h  main.cpp  material.cpp  material.h  object.h  pointlightsource.h  ray.cpp  ray.h  renderengine.cpp  renderengine.h  sphere.cpp  sphere.h  structs.h  triangle.cpp  triangle.h  vector3D.cpp  vector3D.h  world.cpp  world.h
lab0/: CMakeLists.txt
lab0/src/: main.cpp  utils.cpp
lab1/shaders/: vshader.vs
lab1/src/: main.cpp  utils.cpp
lab2/: CMakeLists.txt
lab2/shaders/: vshader_attrib.vs  vshader_uniform.vs
lab2/src/: main.cpp  utils.cpp
lab3/: CMakeLists.txt
lab3/shaders/: vshader.vs
lab3/src/: main.cpp  utils.cpp  utils.h
lab5/shaders/gouraud/: fshader.fs  vshader.vs
lab5/shaders/phong/: fshader.fs
lab5/src/: main.cpp  utils.cpp
lab6/: CMakeLists.txt  main.cpp
